<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ConversionCruncher</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_game_button_text">New Game</string>
    <string name="donate_button_text">Donate</string>
    <string name="high_scores_button_text">High Scores</string>
    <string name="quit_button_text">Quit</string>
    <string name="mode1">Binary to Decimal</string>
    <string name="mode1Hard">Binary to Decimal Hard</string>
    <string name="mode2">Hex to Decimal</string>
    <string name="mode3">Decimal to Hex</string>
    <string name="mode4">Decimal to Binary</string>
    <string name="mode5">Binary to Hex</string>
    <string name="mode5Hard">Binary to Hex Hard</string>
    <string name="mode6">Hex to Binary</string>
    <string name="cumulative">Total</string>
    <string name="checkAnswer">Check Answer</string>
    <string name="binaryInput">Binary Input</string>
    <string name="title_activity_decimal_to_binary">DecimalToBinary</string>
    <string name="title_activity_hex_to_decimal">HexToDecimal</string>
    <string name="title_activity_decimal_to_hex">DecimalToHex</string>
    <string name="title_activity_binary_to_hex">BinaryToHex</string>
    <string name="title_activity_hex_to_binary">HexToBinary</string>
    <string name="zero">0</string>
    <string name="globalHighScores">Global High Scores</string>
    <string name="placeholderInitials">AAA</string>
    <string name="title_activity_about">About</string>
    <string name="about_button_text">About</string>
    <string name="title_activity_binary_to_hex_hard">BinaryToHexHard</string>
    <string name="title_activity_game_over">GameOver</string>
    <string name="title_activity_binary_row">BinaryRow</string>
    <string name="title_activity_hex_row">HexRow</string>
    <string name="sound">Sound Effects:</string>
    <string name="change_name">Submit</string>
    <string name="change_name_help_text">Enter a new nickname...</string>

</resources>