<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/black" >

   <Button
        android:id="@+id/donateButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/donate_button_text" 
        android:background="@drawable/graybutton" 
        android:textColor="@color/white" 
        android:padding="@dimen/standard_padding" />
    
    <ImageView
        android:id="@+id/conversion_cruncher"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:src="@drawable/header" 
        android:layout_weight="1" />

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_game_button_text" 
        android:background="@drawable/bluebutton" 
        android:textColor="@color/white"
        android:padding="@dimen/standard_padding"/>

    <Button
        android:id="@+id/highScoresButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/high_scores_button_text" 
        android:background="@drawable/yellowbutton"
        android:textColor="@color/white"
        android:padding="@dimen/standard_padding" />

    <Button
        android:id="@+id/quitButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/quit_button_text" 
        android:background="@drawable/redbutton"
        android:textColor="@color/white"
        android:padding="@dimen/standard_padding" />

</LinearLayout>