<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/soundLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:padding="@dimen/standard_padding" />

        <ToggleButton
            android:id="@+id/muteSoundToggle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/bluetoggle"
            android:text="@string/sound" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/changeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
			android:hint="@string/change_name_help_text" >
        </EditText>

        <Button
            android:id="@+id/submitChangeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/graybutton"
            android:text="@string/change_name"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:padding="@dimen/standard_padding" />

    </LinearLayout>

</LinearLayout>