<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:id="@+id/localHighScores">

        <TableRow
            android:id="@+id/mode1HighScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/light_gray" >
                <TextView
			        android:id="@+id/mode1ScoreLabel"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/mode1"
			        android:textAppearance="?android:attr/textAppearanceLarge" 
			        android:padding="@dimen/standard_padding" />
			    <TextView
			        android:id="@+id/mode1Score"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/zero"
			        android:textAppearance="?android:attr/textAppearanceLarge" 
			        android:layout_weight="1"
			        android:gravity="right"
			        android:padding="@dimen/standard_padding" />
        </TableRow>

        <TableRow
            android:id="@+id/mode2HighScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
			    <TextView
			        android:id="@+id/mode2ScoreLabel"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/mode2"
			        android:textAppearance="?android:attr/textAppearanceLarge"
			        android:padding="@dimen/standard_padding" />
			    <TextView
			        android:id="@+id/mode2Score"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/zero"
			        android:textAppearance="?android:attr/textAppearanceLarge"
			        android:layout_weight="1"
			        android:gravity="right"
			        android:padding="@dimen/standard_padding"  />
        </TableRow>

        <TableRow
            android:id="@+id/mode3HighScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:background="@color/light_gray" >
			    <TextView
			        android:id="@+id/mode3ScoreLabel"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/mode3"
			        android:textAppearance="?android:attr/textAppearanceLarge"
			        android:padding="@dimen/standard_padding" />
			    <TextView
			        android:id="@+id/mode3Score"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/zero"
			        android:textAppearance="?android:attr/textAppearanceLarge"
			        android:layout_weight="1"
			        android:gravity="right"
			        android:padding="@dimen/standard_padding" />
        </TableRow>

        <TableRow
            android:id="@+id/mode4HighScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
			    <TextView
			        android:id="@+id/mode4ScoreLabel"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/mode4"
			        android:textAppearance="?android:attr/textAppearanceLarge"
			        android:padding="@dimen/standard_padding" />
			    <TextView
			        android:id="@+id/mode4Score"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/zero"
			        android:textAppearance="?android:attr/textAppearanceLarge"
			        android:layout_weight="1"
			        android:gravity="right"
			        android:padding="@dimen/standard_padding" />
        </TableRow>
        
        <TableRow
            android:id="@+id/mode5HighScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/light_gray" >
                <TextView
			        android:id="@+id/mode5ScoreLabel"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/mode5"
			        android:textAppearance="?android:attr/textAppearanceLarge"
			        android:padding="@dimen/standard_padding" />
			    <TextView
			        android:id="@+id/mode5Score"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/zero"
			        android:textAppearance="?android:attr/textAppearanceLarge" 
			        android:layout_weight="1"
			        android:gravity="right"
			        android:padding="@dimen/standard_padding" />
        </TableRow>
    </TableLayout>

</LinearLayout>