<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode5"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ToggleButton
            android:id="@+id/digit4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/binaryInput"
            android:background="@drawable/bluetoggle" 
            android:textOn="1"
            android:textOff="0" />

        <ToggleButton
            android:id="@+id/digit3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/binaryInput"
            android:background="@drawable/bluetoggle"
            android:textOn="1"
            android:textOff="0" />

        <ToggleButton
            android:id="@+id/digit2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/binaryInput" 
            android:background="@drawable/bluetoggle"
            android:textOn="1"
            android:textOff="0" />

        <ToggleButton
            android:id="@+id/digit1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/binaryInput" 
            android:background="@drawable/bluetoggle"
            android:textOn="1"
            android:textOff="0" />

        <TextView
        	android:id="@+id/hexSolution"
       	 	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
    
    <Button
        android:id="@+id/submitButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkAnswer" 
        android:background="@drawable/bluebutton" />

</LinearLayout>